<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="24dp">

    <RadioGroup
        android:id="@+id/theme_radio_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/radio_system_default"
            style="?attr/textAppearanceBody1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/theme_system_default" />

        <RadioButton
            android:id="@+id/radio_light"
            style="?attr/textAppearanceBody1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/theme_light" />

        <RadioButton
            android:id="@+id/radio_dark"
            style="?attr/textAppearanceBody1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/theme_dark" />

    </RadioGroup>

</LinearLayout>
