<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <!-- Option 1 -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/switch_auto_start_read_mode"
            style="?attr/textAppearanceBody1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/setting_auto_start_read_mode" />

        <ImageButton
            android:id="@+id/info_auto_start_read_mode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/info"
            android:src="@drawable/baseline_info_24"
            app:tint="?attr/colorOnSurface" />
    </LinearLayout>

    <!-- Option 2 -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/switch_same_intensity_brightness"
            style="?attr/textAppearanceBody1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/setting_same_intensity_brightness" />

        <ImageButton
            android:id="@+id/info_same_intensity_brightness"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/info"
            android:src="@drawable/baseline_info_24"
            app:tint="?attr/colorOnSurface" />
    </LinearLayout>

    <!-- Option 3: Reset App Data -->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_reset_app_data"
        style="?attr/materialButtonOutlinedStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_reset_app_data"
        android:textColor="@color/button_setting_reset"
        app:iconGravity="start"
        app:strokeColor="@color/button_setting_reset"
        app:strokeWidth="2dp" />

</LinearLayout>
